increasing padding-top on body to prevent nav overlapping content. realigning nav content

--- a/scarf/static/main.css
+++ b/scarf/static/main.css
@@ -1,4 +1,4 @@
-body { padding-top: 70px; }
+body { padding-top: 90px; }
 
 .btn-file {
     position: relative;
